--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "layout-template",
+  "name": "template",
   "version": "1.0.0",
   "description": "markup",
   "main": "app.js",
@@ -10,14 +10,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/Antresolrec"
+    "url": "https://github.com/Antresolrec/webpack-njk"
   },
   "author": "antresolrec",
   "license": "ISC",
   "browserslist": [
-    "last 2 versions",
-    "safari 8",
-    "ie 11"
+    "last 2 versions"
   ],
   "devDependencies": {
     "@babel/core": "^7.11.6",
@@ -26,7 +24,9 @@
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.0.6",
     "copy-webpack-plugin": "^5.1.1",
+    "core-js": "^3.6.5",
     "css-loader": "^3.5.3",
+    "dotenv-webpack": "^4.0.0",
     "eslint": "^7.17.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^8.3.0",
@@ -34,26 +34,28 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-vue": "^7.4.1",
+    "eslint-webpack-plugin": "^2.5.4",
     "html-beautify-webpack-plugin": "^1.0.5",
     "html-webpack-plugin": "^3.2.0",
     "import-glob-loader": "^1.1.0",
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.14.1",
+    "nunjucks": "^3.2.3",
     "postcss-loader": "^3.0.0",
     "prettier": "^2.2.1",
+    "regenerator-runtime": "^0.13.7",
     "sass-loader": "^8.0.2",
     "shx": "^0.3.2",
+    "simple-nunjucks-loader": "2.0.3",
     "style-loader": "^1.2.1",
     "webkit-line-clamp": "1.2.2",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.10.2",
-    "webpack-merge": "^4.2.2",
-    "core-js": "^3.6.5",
-    "dotenv-webpack": "^4.0.0",
-    "eslint-webpack-plugin": "^2.5.4",
-    "nunjucks": "^3.2.3",
-    "regenerator-runtime": "^0.13.7",
-    "simple-nunjucks-loader": "2.0.3"
+    "webpack-merge": "^4.2.2"
+  },
+  "dependencies": {
+    "@fancyapps/ui": "^4.0.31",
+    "lazysizes": "^5.3.2"
   }
 }
