--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
   "dependencies": {
     "@fancyapps/ui": "^4.0.31",
     "animejs": "^3.2.1",
-    "lazysizes": "^5.3.2"
+    "lazysizes": "^5.3.2",
+    "smooth-scroll": "^16.1.3"
   }
 }
