--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
   "dependencies": {
     "@fancyapps/ui": "^4.0.31",
     "animejs": "^3.2.1",
+    "browser-update": "^3.3.40",
     "lazysizes": "^5.3.2",
     "smooth-scroll": "^16.1.3"
   }
