--- a/package.json
+++ b/package.json
@@ -56,6 +56,8 @@
     "animejs": "^3.2.1",
     "browser-update": "^3.3.40",
     "lazysizes": "^5.3.2",
-    "smooth-scroll": "^16.1.3"
+    "slim-select": "^1.27.1",
+    "smooth-scroll": "^16.1.3",
+    "swiper": "^8.4.4"
   }
 }
